Updated connectors dependency.